--- a/exit/index.html
+++ b/exit/index.html
@@ -34,7 +34,6 @@ oc: page, oi: 2, a: c/page, f: f/main
 P:: {a=>node, c=>content, path=>[exit]}-->
   
   <a href="../index.html"><img alt="Logo" class="logo" src="../i/logo-1410165267.png" /></a>
-<div class="hello"><a href="../login.html">Войти</a></div>
 <div class='content'>
 
 <h1>Выйти</h1>
@@ -44,7 +43,7 @@ P:: {a=>node, c=>content, path=>[exit]}-->
 
 </div>
 <a href="../index.html" class="go-home" title="Вернуться на главную страницу"><img alt="Go-home" src="../i/go-home-1410165267.png" /></a>
-<div class='copy'>Автор: <b>Лиза</b><br>при поддержке<br><a href="http://happy-studio.ru">Хэппи-Студио</a></div>
+<div class='copy'>Автор: <b>Лиза</b></div>
 
   
 </body>
