--- a/gallery_person_photo/8.html
+++ b/gallery_person_photo/8.html
@@ -34,7 +34,6 @@ mc: , mo: , mpa: 10, ms: , a: c/empty, f: f/main
 P:: {a=>gallery_person_photo, c=>content, id=>8}-->
   
   <a href="../index.html"><img alt="Logo" class="logo" src="../i/logo-1410165267.png" /></a>
-<div class="hello"><a href="../login.html">Войти</a></div>
 <div class='content'>
 
 <h1><a href="../gallery_person/3.html">Фотографии 4/30: Снежка</a></h1>
@@ -46,7 +45,7 @@ P:: {a=>gallery_person_photo, c=>content, id=>8}-->
 
 </div>
 <a href="../index.html" class="go-home" title="Вернуться на главную страницу"><img alt="Go-home" src="../i/go-home-1410165267.png" /></a>
-<div class='copy'>Автор: <b>Лиза</b><br>при поддержке<br><a href="http://happy-studio.ru">Хэппи-Студио</a></div>
+<div class='copy'>Автор: <b>Лиза</b></div>
 
   
 </body>
