--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@ oc: , oi: , a: c/main_page, f: f/main
 P:: {a=>node, c=>content}-->
   
   <div class='body-main'>
-<div class="hello"><a href="login.html">Войти</a></div>
 <a href="exit/index.html" class="exit">&nbsp;</a>
 <a href="gallery/index.html" class="gallery">&nbsp;</a>
 
@@ -42,7 +41,7 @@ P:: {a=>node, c=>content}-->
 <a href="food/index.html" class="food">&nbsp;</a>
 <a href="advices/index.html" class="advices">&nbsp;</a>
 <a href="event/index.html" class="event">&nbsp;</a>
-<div class='copy-main'>Автор: <b>Лиза</b><br>при поддержке<br><a href="http://happy-studio.ru">Хэппи-Студио</a></div>
+<div class='copy-main'>Автор: <b>Лиза</b></div>
 </div>
 
 
