--- a/login.html
+++ b/login.html
@@ -37,16 +37,11 @@ P:: {a=>login, c=>auth}-->
 <div class="hello"><a href="login.html">Войти</a></div>
 <div class='content'>
 
-<h1>Войти</h1>
-<form action="/login/" class="form-cat_narrow" method="post"><div style="margin:0;padding:0;display:inline"><input name="authenticity_token" type="hidden" value="b6F6WiYDJL7PVSFg+uGf1rO/jLG1pZopI2lmxkM5IPE=" /></div>
-<fieldset class="inputs"><ol><li class="required field field-kind-string field-model-person_session field-name-login" id="person_session_login_input"><label for="person_session_login">Как зовут вашего кота или кошку?<abbr title="обязательно">*</abbr></label><input class="string" id="person_session_login" name="person_session[login]" type="text" /></li>
-<li class="required field field-kind-password field-model-person_session field-name-password" id="person_session_password_input"><label for="person_session_password">Пароль<abbr title="обязательно">*</abbr></label><input class="password" id="person_session_password" name="person_session[password]" type="password" /></li></ol></fieldset>
-<fieldset class="buttons"><ol><li class="required field field-kind-submit field-model-person_session field-name-submit" id="person_session_submit_input"><input name="commit" type="submit" value="Войти" /></li></ol></fieldset></form><h1>Регистрация</h1>
-<p><a href="register/index.html">Регистрация</a></p>
+  <p>К сожалению вы не можете добавить фотографию, так как это сайт только для Снежки</p>
 
 </div>
 <a href="index.html" class="go-home" title="Вернуться на главную страницу"><img alt="Go-home" src="i/go-home-1410165267.png" /></a>
-<div class='copy'>Автор: <b>Лиза</b><br>при поддержке<br><a href="http://happy-studio.ru">Хэппи-Студио</a></div>
+<div class='copy'>Автор: <b>Лиза</b></div>
 
   
 </body>
