--- a/register/index.html
+++ b/register/index.html
@@ -34,7 +34,6 @@ mc: , mo: , mpa: 10, ms: , a: c/empty, f: f/main
 P:: {a=>register, c=>auth}-->
   
   <a href="../index.html"><img alt="Logo" class="logo" src="../i/logo-1410165267.png" /></a>
-<div class="hello"><a href="../login.html">Войти</a></div>
 <div class='content'>
 
 <h1>Регистрация</h1>
@@ -45,7 +44,7 @@ P:: {a=>register, c=>auth}-->
 <fieldset class="buttons"><ol><li class="optional field field-kind-submit field-model-person field-name-submit" id="person_submit_input"><input name="commit" type="submit" value="Зарегистрироваться" /></li></ol></fieldset></form>
 </div>
 <a href="../index.html" class="go-home" title="Вернуться на главную страницу"><img alt="Go-home" src="../i/go-home-1410165267.png" /></a>
-<div class='copy'>Автор: <b>Лиза</b><br>при поддержке<br><a href="http://happy-studio.ru">Хэппи-Студио</a></div>
+<div class='copy'>Автор: <b>Лиза</b></div>
 
   
 </body>
